# financial-statement-processor

./: FS_IMSUB GLOBAL_2565 - 2566.json  FS_IMSUB GLOBAL_2565 - 2566_01.json  index.py  pyproject.toml
